<resources>
    <string name="app_name">Speedometer</string>
    <string name="init_speed">-.-</string>
    <string name="max_speed">High Speed: </string>
    <string name="mph"> MPH</string>
    <string name="init_odometer">0.00</string>
    <string name="init_trip">100</string>
    <string name="start_trip">0</string>
    <string name="miles"> MILES</string>
    <string name="start_button">Start Trip</string>

</resources>
