<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.msu.klingsam.speedometer.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/speedBar"
        android:max="70"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/init_speed"
            android:layout_height="wrap_content"
            android:id="@+id/speedView"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="36sp"
            android:gravity="top|right|center_horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingRight="10dp" />

        <TextView
            android:text="@string/mph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mphView"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:text="@string/init_odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/odometerView"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="10dp" />

        <TextView
            android:text="@string/miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/milesView"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tripBar"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="@string/start_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tripStartView"
            android:layout_weight="1"
            android:gravity="left" />

        <Button
            android:text="@string/start_button"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:onClick="onStartTrip" />

        <TextView
            android:text="@string/init_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tripEndView"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:text="@string/init_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maxView"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="10dp" />

        <TextView
            android:text="@string/mph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/highMphView"
            android:layout_weight="1" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/maxBar"
        android:max="70"
        android:layout_weight="1" />

</LinearLayout>
